--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,5 +1,7 @@
 /* font-family: 'Brittney Signature', sans-serif; */
-                                                
+
+
+@import url('http://fonts.cdnfonts.com/css/brittany-signature');
 
 * {
   margin: 0;
@@ -97,18 +99,21 @@
   text-align: center;
 
 }
-#membertitle{
+
+#membertitle {
   display: flex;
   justify-content: space-evenly;
 
 }
-#memberiglink{
+
+#memberiglink {
   display: flex;
   justify-content: space-evenly;
   padding: 0px 0px 0px 40px;
-  
+
 }
-#memberiglink a{
+
+#memberiglink a {
   text-decoration: none;
 }
 
