--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,7 +1,7 @@
 /* font-family: 'Brittney Signature', sans-serif; */
 
 
-@import url('http://fonts.cdnfonts.com/css/brittany-signature');
+/* @import url('http://fonts.cdnfonts.com/css/brittany-signature'); */
 
 * {
   margin: 0;
