--- a/stylesheetold.css
+++ b/stylesheetold.css
@@ -1,5 +1,7 @@
 /* font-family: 'Brittney Signature', sans-serif; */
-
+/* @tailwind base;
+@tailwind components;
+@tailwind utilities; */
 * {
   margin: 0;
   padding: 0;
